[package]
name = "phylo"
version = "0.1.0"
authors = ["David Northover <david.northover@temple.edu>"]
edition = "2018"

[lib]
crate-type = ["lib"]

[dependencies.serde]
version = "1.0.82"
features = ["derive"]

[dependencies]
ndarray = "0.12.1"
regex = "1"
serde_derive = "1.0.82"
serde_json = "1.0"
rand = "0.6"
indexmap = "1.0.2"
chrono = { version = "0.4", features = ["serde"] }
arrayref = "0.3.5"
log = "0.4.6"
csv = "1.1"
rust-htslib = "0.26"

[dependencies.num]
version = "0.2.0"
features = ["serde", "rand"]

[dependencies.phf]
version = "0.8"
features = ["macros"]